Closed
Bug 1630290
Opened 5 years ago
Closed 5 years ago
EnterVR/ExitVR loop in some WebXR demos
Categories
(Core :: WebVR, defect)
Core
WebVR
Tracking
()
RESOLVED
FIXED
mozilla77
Tracking | Status | |
---|---|---|
firefox77 | --- | fixed |
People
(Reporter: mortimergoro, Assigned: mortimergoro)
Details
Attachments
(1 file)
STR:
- Open https://mixedreality.mozilla.org/jumpy-balls/
- EnterVR
- There is a flickering between 3D scenes and the FxR spinner.
- The WebGL context is lost after some time
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → imanol
Assignee | ||
Comment 1•5 years ago
|
||
I just found this is related to a Gecko bug when XRSession.updateRenderState is called
Assignee | ||
Comment 2•5 years ago
|
||
Pushed by igorostizaga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e23df2bd9b8b
Update VRManager VRLayer instead of recreating it. r=daoshengmu,kip
Comment 4•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in
before you can comment on or make changes to this bug.
Description
•