Bug 1630290 - Update VRManager VRLayer instead of recreating it. r=daoshengmu,kip

Differential Revision: https://phabricator.services.mozilla.com/D71064